tests/errors/undefined_variable.orus
// Test undefined variable error handling

let a: i32 = 10

print("Undefined Variable Test:")
print("a is defined and its value is:")
print(a)

// The line below would cause a compilation error
// Uncomment to test error handling
// print(b)

